--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p>Itz time to your world</p>
         </div>
         <div class="portfolio-img">
-            <img src="/Untitled-3.jpg" alt="" style="width: 100%;">
+            <img src="Untitled-3.jpg" alt="" style="width: 100%;">
         </div>
     </section>
 
