--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="aim_for_mission">
             <div class="mission_pupose">
 
-                <img src="/illustrator-1.png" alt="" style="height: 141px; width: 141px;">
+                <img src="illustrator-1.png" alt="" style="height: 141px; width: 141px;">
                 <h4 style="margin-left: 10px;">Mission</h4>
                 <p style="margin: 10px;">If you say that you have a mission, you mean that you have a strong commitment
                     and sense of duty to
@@ -50,7 +50,7 @@
             </div>
             <div class="mission_pupose2">
 
-                <img src="/illustrator-2.png" alt="" style="height: 141px; width: 141px;">
+                <img src="illustrator-2.png" alt="" style="height: 141px; width: 141px;">
                 <h4 style="margin-left: 10px;">Vission</h4>
                 <p style="margin: 10px;">Your vision is your most important dream or mental picture. It can also be a
                     set of dreams and
@@ -58,7 +58,7 @@
             </div>
             <div class="mission_pupose3">
 
-                <img src="/illustrator-3.png" alt="" style="height: 141px; width: 141px;">
+                <img src="illustrator-3.png" alt="" style="height: 141px; width: 141px;">
                 <h4 style="margin-left: 10px;">Goals</h4>
                 <p style="margin: 10px;">Most people set several goals every year, but most of them go unfulfilled.
 
@@ -67,7 +67,7 @@
         </div>
     </section>
     <section class="devlop_limits">
-        <div><img src="/coding.png" style="height: 400px; width: 400px;" alt=""></div>
+        <div><img src="coding.png" style="height: 400px; width: 400px;" alt=""></div>
         <div style="padding: 75px;">
             <h1>Develop
                 Without Limits</h1>
@@ -88,13 +88,13 @@
                 people’s lives and help determine how they meet their needs.</p>
             <button class="mission_btn">Read the documentation</button>
         </div>
-        <div><img src="/project.png" style="height: 400px; width: 400px;" alt=""></div>
+        <div><img src="project.png" style="height: 400px; width: 400px;" alt=""></div>
     </section>
     <section>
         <h1 style="text-align: center; font-size: 35px; color: #3E3E3E;">Build Corona <span
                 style="color: #FFAD5A;">Application</span></h1>
         <div class="corona_app">
-            <div><img src="/app.png" style="width:338px; height: 542px;" alt=""></div>
+            <div><img src="app.png" style="width:338px; height: 542px;" alt=""></div>
             <div style="padding: 40px;">
                 <h1 style="font-size: 20px;">Stay safe with Go <span style="color: #FFAD5A;">Corona</span> </h1>
                 <p>Avoid crowds and close contact. Wear a properly fitted mask when physical distancing is not possible
@@ -106,7 +106,8 @@
     </section>
 
     <section style="margin-bottom: 10px;">
-        <h1 style="text-align: center; font-size: 35px; color: #3E3E3E;">Road Map for Mission-2022</h1>
+        <h1 style="text-align: center; font-size: 35px; color: #3E3E3E;">Road Map for <span
+                style="color: #FFAD5A;">2022</span></h1>
         <div class="roadmap_2022">
             <div class="roadmap_box
                 ">
@@ -114,7 +115,7 @@
                 <p>you have to serious all the timne.You have to follow the rules and regulation all the time to fill up
                     your dream</p>
             </div>
-            <div class="roadmap_box">
+            <div class="roadmap_box2">
                 <h3>Be attentive to every step</h3>
                 <p>You have to be attentive to all the time to make successful to your work.So if you you want to make
                     succesful in your work,you have to be attentive to your every singal step to your work</p>
