--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                 and feel hopeless. But if
                 you instead focus on changing your actions without worrying about how it changes you as a person, real
                 change becomes much simpler.</p>
-            <button class="mission_btn">Change Now</button>
+            <button class="mission_btn"> <a href="https://web.programming-hero.com"
+                    style="text-decoration: none; color: beige;">Change Now</a></button>
             <p>Itz time to your world</p>
         </div>
         <div class="portfolio-img">
@@ -75,7 +76,8 @@
                 the City of Los Angeles and LA’s BEST on curriculum that meets the needs of inner city kids. From
                 helping TechBridge Girls deepen their commitment to equity to working with the National AfterSchool
                 Association & Google to develop the first afterschool digital toolkit.</p>
-            <button class="mission_btn">Read the documentation</button>
+            <button class="mission_btn"><a href="https://web.programming-hero.com"
+                    style="text-decoration: none; color: beige;"> Read the documentation </a> </button>
         </div>
     </section>
     <section class="global_connection">
@@ -86,7 +88,8 @@
                 learn about aspects of daily life in other places around the world. Inviting text, accessible maps, and
                 vibrant photographs work together to explain how cultural and environmental characteristics affect
                 people’s lives and help determine how they meet their needs.</p>
-            <button class="mission_btn">Read the documentation</button>
+            <button class="mission_btn"><a href="https://web.programming-hero.com"
+                    style="text-decoration: none; color: beige;"> Read the documentation </a> </button>
         </div>
         <div><img src="project.png" style="height: 400px; width: 400px;" alt=""></div>
     </section>
@@ -100,7 +103,8 @@
                 <p>Avoid crowds and close contact. Wear a properly fitted mask when physical distancing is not possible
                     and in poorly ventilatedy settings. Clean your hands frequently with alcohol-based hand rub or soap
                     and water</p>
-                <button class="mission_btn">Add features</button>
+                <button class="mission_btn"><a href="https://web.programming-hero.com"
+                        style="text-decoration: none; color: beige;"> Add features </a> </button>
             </div>
         </div>
     </section>
